# tauri-vue-template

./: .eslintrc-auto-import.json  .gitignore  CHANGES.md  README.md  auto-imports.d.ts  biome.json  bump-version.cjs  components.d.ts  eslint.config.cjs  index.html  package.json  pnpm-lock.yaml  postcss.config.cjs  postcss.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
.github/: renovate.json
.github/workflows/: build_and_release.yml  main.yml  release.yml  test-build.yml  test.yml
src/: App.vue  main.ts  store.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css  main.postcss
src/components/: GreetComponent.vue  HelloWorld.vue
v1/: CHANGES.md  package.json  pnpm-lock.yaml
v1/.github/workflows/: release.yml
v1/src/: App.vue
v1/src-tauri/: tauri.conf.json
v1/src-tauri/src/: main.rs
v1/src/components/: HelloWorld.vue
