[package]
name = "tauri_vue_template"
version = "0.4.0"
description = "A Tauri App"
authors = ["Ville Säävuori"]
license = "MIT"
repository = "https://github.com/Uninen/tauri-vue-template"
default-run = "tauri_vue_template"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
tauri = { version = "1.6.0", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
